--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=foro
+spring.datasource.url=jdbc:mysql://localhost/foro_api
+spring.datasource.username=root
+spring.datasource.password=12345678
