--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=foro
-spring.datasource.url=jdbc:mysql://localhost/foro_api
-spring.datasource.username=root
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME2}
+spring.datasource.username=${DB_USER2}
+spring.datasource.password=${DB_PASS2}
 
