--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME2}
 spring.datasource.username=${DB_USER2}
 spring.datasource.password=${DB_PASS2}
 
+server.error.include-stacktrace=never
