--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,9 @@ spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME2}
 spring.datasource.username=${DB_USER2}
 spring.datasource.password=${DB_PASS2}
 
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+
 server.error.include-stacktrace=never
